Merge TeamFisache main branch updates into local 4th-demo
- backend: add challenge/notification system (ChallengeController, NotificationService, ChallengeAgentService), Kafka Dockerfile, CORS update, portfolio/stock API refactor
- ai-server: add Kafka producer/logging, nag_agent module, refactor asset_portfolio to parallel agents, rebalance uses normalize_amounts, mini_challenge_agent adopts 3-step Korean prompts
- frontend: add challenge alarm modal, notification panel, mission widget real API integration, Dashboard Pori BFF flow (analyze→proposing→preview steps, widget highlight), MonthlyReport real API integration with MonthlyReportData